docs: 2025-04-14 TIL 작성

--- a/til/dj/2025-04-14.md
+++ b/til/dj/2025-04-14.md
@@ -1,16 +1,15 @@
 # 2024-04-14
 
 ## 🔍 오늘 배운 내용
-
-- Git 커밋 컨벤션 작성 방법
-- Content-Security-Policy(CSP) 설정 관련 디버깅
-- LangChain Prompt 구성에서 어린이 사용자 조건 반영
+### ✅ MCP란?
+- MCP는 **Multi-agent Collaboration Platform**의 약자로, 다양한 AI 에이전트(LLM, TTS, Vision 등)를 유기적으로 연동하여 **복합 작업을 자동화**하는 시스템을 의미함.
+- 예시: LLM → TTS → Vision → Memory → Action 흐름처럼 단계별로 다른 에이전트가 협업함.
 
 ## 🧠 느낀 점
-
-- 작은 디테일도 LLM 응답에 영향을 크게 미칠 수 있다.
-- 서버 설정 변경 시 실제 반영까지의 흐름을 잘 이해하고 있어야 한다.
+- 단일 LLM 사용보다 더 정교하고 복합적인 처리가 가능해짐
+- 에이전트 간 역할 분담이 명확하여 유지보수에 유리
+- LangGraph를 통해 흐름을 시각적으로 이해할 수 있어 개발 시 설계가 쉬워졌음
 
 ## 📌 키워드
 
-`#git` `#langchain` `#csp` `#prompt`
+`#git` `#langchain` `#mcp`
